--- a/templates/anchor_system_real.html
+++ b/templates/anchor_system_real.html
@@ -520,6 +520,7 @@
                         </tbody>
                     </table>
                 </div>
+            </div>
 
         <!-- 历史极值记录 -->
         <div class="card">
